# gameoflife

./: Cargo.toml  README.md  info.txt
src/: game.rs  main.rs
