[package]
name = "gameoflife"
version = "0.1.0"
authors = ["zd4y"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1.9"

[dependencies.crossterm]
version =  "0.25.0"
features = ["event-stream"]

[dependencies.tokio]
version = "1.20.1"
features = ["full"]
